# BIMQuantify

./: .dockerignore  .env.example  .gitattributes  .gitignore  .i18n-allowlist.json  .prettierignore  AUDIT_FINDINGS.md  BimDossier-Business-Plan-UWV.docx  CLAUDE.md  README.md  SECURITY.md  TECH_DEBT.md  _lint.json  blog-content-plan.csv  check_unused.sh  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  wkb_mvp_backlog.csv
apps/api/: .env.example  .gitignore  README.md  _cleanup_stale_schemas.py  alembic.ini  alembic.master.ini  alembic.tenant.ini  jest.config.cjs  package.json  pyproject.toml  tenant_schema_snapshot.json
apps/api/alembic/: env.py
apps/api/alembic/master/: env.py
apps/api/alembic/master/versions/: 0001_initial_master.py  0002_add_organization_image_key.py  0002_free_tier.py  0002_free_user_limits.py  0002_org_purged_at.py  0002_org_storage_limit.py  0002_seat_limit.py  0002_user_locale.py  0003_blog_posts.py  0003_free_projects.py  0003_guest_and_impersonator.py  0003_master_token_epoch.py  0003_organization_plan.py  0003_user_anonymized_at.py  0004_rename_pooled.py  0005_free_retune.py  0006_pooled_reports.py  6a968fb9fd24_add_avatar_url_to_users.py
apps/api/alembic/tenant/: env.py
apps/api/alembic/tenant/versions/: 0001_initial_tenant.py  0002_add_element_link_index.py  0002_annotation_state.py  0002_dup_and_instrument.py  0002_finding_templates.py  0002_findings_linked_model_id.py  0002_floor_plans_key.py  (+26 more)
apps/api/alembic/versions/: 0001_initial.py  0001_initial_schema.py  0002_projects_and_rls.py  0003_project_files.py  0004_project_file_extraction.py  0005_add_models_hard_cut.py  0006_enrich_projects.py  0007_project_coordinates.py  0008_file_type_column.py  0009_project_lifecycle.py  0010_jobs_table.py  0011_bbl_compliance_job_type.py  0012_wkb_compliance_job_types.py  a1b2c3d4e5f6_jurisdiction_foundation.py  b7c4e2f9d8a1_add_risks_table.py  b9d1f4a3e7c2_add_model_primary_file_type.py  c5d7e2f8a3b1_add_neutral_domain_roles.py  c8e2a4b6f9d3_add_borgingsplan_tables.py  cada7e3b831b_add_notifications_and_notification_.py  d2c8a9f1b3e4_add_content_hash_dedup.py  d3f8e9c1b2a4_add_project_classification_fields.py  e4a9c1b6f7d2_add_project_instrument_id.py  e7a4f2c918d0_add_access_requests.py  f2a8b6c4d1e3_drop_project_country_default.py  f8a1c2d3e4b5_add_reports_and_compliance_report_job.py  g1h2i3j4k5l6_add_soft_delete_columns.py  h2i3j4k5l6m7_extend_notification_event_types.py
apps/api/scripts/: migrate_org_certificates.py  resend_activation_for_aniket.py  setup_e2e_db.py
apps/api/src/: server.ts
apps/api/src/__tests__/: health.test.ts
apps/api/src/bimdossier_api/: _rls_sql.py  access.py  approx.py  attachment_links.py  audit.py  config.py  content_disposition.py  csv_safety.py  data_lifecycle.py  db.py  entitlements.py  finding_custom_values.py  free_limits.py  free_reconcile.py  free_usage.py  idempotency.py  logging_config.py  logging_utils.py  main.py  migrations_check.py  observability.py  pagination.py  pdf_pages.py  pooled_reconcile.py  security_headers.py  seed.py  tag_rows.py  tenancy.py
apps/api/src/bimquantify_api/: config.py  db.py  main.py  seed.py
apps/api/src/bimstitch_api/: _rls_sql.py  access.py  audit.py  config.py  db.py  finding_custom_values.py  main.py  migrations_check.py  observability.py  pagination.py  seed.py  seed_projects.py  tag_rows.py  tenancy.py
apps/api/src/routes/: index.ts
apps/api/tests/: conftest.py  test_access_requests.py  test_account_lockout.py  test_activate.py  test_activity.py  test_admin_access_control.py  test_admin_access_requests.py  test_admin_blog.py  test_admin_free_users.py  test_admin_jobs.py  test_admin_org_purge.py  test_admin_seats.py  test_admin_storage.py  test_aligned_sheets.py  test_aligned_sheets_calibrate.py  test_alignment_solver.py  test_approx.py  test_attachments.py  test_audit_log_append_only.py  test_audit_wiring.py  test_auth_credential_audit.py  test_background.py  test_bcf_import_limits.py  test_bcf_models.py  test_bcf_parser.py  test_bcf_router.py  test_bcf_snapshots.py  test_blocklist.py  test_borgingsplan.py  test_callbacks_classification.py  test_callbacks_progress.py  test_capture_links.py  test_certificates.py  test_compliance_check.py  test_compliance_client.py  test_compliance_export.py  test_content_disposition.py  test_contractors.py  test_cors.py  test_csv_safety.py  (+137 more)
apps/compliance-checker/: .env.example  Dockerfile  package.json  pyproject.toml
apps/compliance-checker/rules/bbl/: manifest.yaml
apps/compliance-checker/src/compliance_checker/: __main__.py  config.py  server.py  storage.py
apps/compliance-checker/tests/: conftest.py  test_engine.py  test_reasoning.py  test_report_markdown.py  test_scheduler.py  test_tier1_rules.py
apps/compliance-checker/tests/fixtures/: sample_metadata.json  sample_properties.json
(+2246 files in other folders)
