[project]
name = "bimdossier-api"
version = "0.0.1"
description = "BimDossier FastAPI backend with auth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-users[sqlalchemy]>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.2",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.2",
    "redis>=5.0.0",
    "fastapi-limiter>=0.1.6,<0.2",
    "aioboto3>=13.0.0",
    "sentry-sdk[fastapi]>=2.0",
    "holidays>=0.65",
    "tzdata>=2024.1",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-python-jose>=3.3.4.20240106",
    "types-defusedxml>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bimdossier_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "SIM", "TCH", "RUF",
]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Translation catalogs are flat data dicts. UI sentences shouldn't be wrapped to
# fit the 100-char line limit — it hurts readability and grep-ability of the
# message text. Parity/coverage is enforced by the i18n tests instead.
"src/bimdossier_api/i18n/messages/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["bimdossier_api"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fastapi_users.*", "aiosmtplib.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
